# Upwork-Job-Scraper

./: .gitignore  load_cfox.py  main.py  pyproject.toml  score_jobs.py  server.py
.claude/: settings.local.json
.github/workflows/: main.yml  upwork.yml
camoufox_captcha/: __init__.py
camoufox_captcha/cloudflare/: solve_by_click.py
camoufox_captcha/cloudflare/utils/: detection.py  dom_helpers.py
camoufox_captcha/common/: detection.py  shadow_root.py
static/: index.html  style.css
utils/: ai_scorer.py  attr_extractor.py  db.py  logger.py  settings.py
